socket.io integado à comunicação serial

--- a/front/src/components/Botao/botao.css
+++ b/front/src/components/Botao/botao.css
@@ -3,8 +3,12 @@
 }
 
 
+img{
+    height: 100px;
+    width: 100px;
+}
 
-button{
+.teco{
     position: relative;
     top: 50%;
     transform: translateY(-50%);
